[&1.6] Issue 3534: Wrong margin on input element
http://code.google.com/p/fbug/source/detail?r=8029

--- a/extension/content/firebug/highlighter.css
+++ b/extension/content/firebug/highlighter.css
@@ -114,7 +114,8 @@
     border: 0 none;
     opacity: 1;
     outline: 0;
-    min-width: 0;
+    width: auto;
+	min-width: 0;
     max-width: none;
     min-height: 0;
     max-height: none;
